# swp2tex

./: .gitignore  LICENSE  README.md  build_exe.ps1  launcher_cli.py  launcher_gui.py  pyproject.toml  release.ps1
.github/workflows/: build-macos.yml
src/swp2tex/: __init__.py  __main__.py  cli.py  core.py  gui.py
tests/: conftest.py  test_core.py  test_gui_helpers.py
