[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swp2tex-bib"
version = "0.1.0"
description = "Bibliography-focused SWP LaTeX checker, builder, and arXiv exporter."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
gui-dnd = ["tkinterdnd2>=0.4"]

[project.scripts]
swp2tex-bib = "swp2tex.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
swp2tex = ["assets/*.bst"]
